--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -1,37 +1,30 @@
 name: Terraform Destroy
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
 
 jobs:
-  terraform-destroy:
-    name: Destroy Terraform Resources
+  terraform:
     runs-on: ubuntu-latest
 
-    env:
-      AWS_REGION: eu-west-2
-      TF_LOG: WARN
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.5.0
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
 
-    - name: Terraform Init
-      run: terraform -chdir=terraform init
+      - name: Terraform Init
+        run: terraform -chdir=terraform init
 
-    - name: Terraform Destroy
-      run: terraform -chdir=terraform destroy -auto-approve
-      env:
-        TF_VAR_certificate_arn: ${{ secrets.CERTIFICATE_ARN }}
+      - name: Terraform Destroy
+        run: terraform -chdir=terraform destroy -auto-approve -var="certificate_arn=${{ secrets.CERTIFICATE_ARN }}"
