--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -1,4 +1,4 @@
-name: Build, Scan, and Push to ECR
+name: Docker Build, Scan, and Push
 
 on:
   push:
@@ -6,46 +6,34 @@ on:
       - main
 
 jobs:
-  build-and-scan:
+  docker:
+    name: Docker Workflow
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-2
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Login to Amazon ECR
-      run: |
-        aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin 156041431760.dkr.ecr.eu-west-2.amazonaws.com
+      - name: Build Docker Image
+        run: |
+          docker build -t ecsproject-repo .
 
-    - name: Build Docker Image
-      run: docker build -t ecsproject-repo .
+      - name: Run Trivy Vulnerability Scan
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ecsproject-repo:latest
+          format: table
+          ignore-unfixed: true
+          severity: HIGH,CRITICAL
 
-    - name: Tag Docker Image
-      run: docker tag ecsproject-repo:latest 156041431760.dkr.ecr.eu-west-2.amazonaws.com/ecsproject-repo:latest
+      - name: Tag Docker Image
+        run: |
+          docker tag ecsproject-repo:latest 156041431760.dkr.ecr.eu-west-2.amazonaws.com/ecsproject-repo:latest
 
-    - name: Push Docker Image to ECR
-      run: docker push 156041431760.dkr.ecr.eu-west-2.amazonaws.com/ecsproject-repo:latest
-
-    - name: Run Container
-      run: |
-        docker run --rm -d -p 3000:3000 --name ecsproject-container ecsproject-repo
-        sleep 5
-        curl -f http://localhost:3000 || (echo "Container failed to start" && exit 1)
-
-    - name: Stop Container
-      if: always()
-      run: docker stop ecsproject-container || echo "Container was not running"
-
-    - name: Scan Docker Image with Trivy
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: 156041431760.dkr.ecr.eu-west-2.amazonaws.com/ecsproject-repo:latest
-        format: 'table'
-        severity: 'CRITICAL,HIGH'
+      - name: Push Docker Image to ECR
+        run: |
+          docker push 156041431760.dkr.ecr.eu-west-2.amazonaws.com/ecsproject-repo:latest
