--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           terraform_version: 1.5.6
 
+      - name: Run Checkov Security Scan
+        uses: bridgecrewio/checkov-action@master
+        with:
+          directory: .
+          soft_fail: false
+
       - name: Initialize Terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
