--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,32 +11,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code from the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Step 2: Set up Terraform for the workflow
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.6
+          terraform_version: 1.5.6 # Ensures a consistent Terraform version
 
+      # Step 3: Run Checkov to scan Terraform code for security/compliance issues
       - name: Run Checkov Security Scan
         uses: bridgecrewio/checkov-action@master
         with:
-          directory: .
-          soft_fail: false
+          directory: . # Points Checkov to the root directory for scanning
+          soft_fail: false # Fails the workflow if critical issues are detected
 
+      # Step 4: Initialize Terraform to download required providers and modules
       - name: Initialize Terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform init
 
+      # Step 5: Run Terraform Plan to preview changes
       - name: Terraform Plan
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform plan
 
+      # Step 6: Apply Terraform changes to deploy infrastructure
       - name: Terraform Apply
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
