--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -14,13 +14,18 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
         with:
           mask-password: true
-        env:
-          AWS_DEFAULT_REGION: eu-west-2
 
       - name: Build Docker Image
         run: |
@@ -36,8 +41,8 @@ jobs:
 
       - name: Tag Docker Image
         run: |
-          docker tag ecsproject-repo:latest 156041431760.dkr.ecr.eu-west-2.amazonaws.com/ecsproject-repo:latest
+          docker tag ecsproject-repo:latest 156041431760.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/ecsproject-repo:latest
 
       - name: Push Docker Image to ECR
         run: |
-          docker push 156041431760.dkr.ecr.eu-west-2.amazonaws.com/ecsproject-repo:latest
+          docker push 156041431760.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/ecsproject-repo:latest
