--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Tag Docker Image
         run: |
-          docker tag ecsproject-repo:latest 156041431760.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/ecsproject-repo:latest
+          docker tag ecsproject-repo:latest 156041431760.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/ecsproject:latest
 
       - name: Push Docker Image to ECR
         run: |
-          docker push 156041431760.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/ecsproject-repo:latest
+          docker push 156041431760.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/ecsproject:latest
